# src/model/dto/user/CreateUserDto.ts
@@ -1,0 +1,10 @@
+export class CreateUserDto {
+    public personID: string;
+    public password: string;
+
+    constructor(personID: string, password: string) {
+        this.personID = personID;
+        this.password = password;
+    }
+
+}
